# oxplow

./: README.md  compose.yaml  pyproject.toml  pytest.ini
src/oxplow/: __init__.py  db.py  errors.py  registry.py  types.py
src/oxplow/core/: __init__.py  decorators.py  models.py
src/oxplow/migrations/: registry.py
src/oxplow/query/: sql.py
tests/: conftest.py  test_database.py  test_models.py
tests/sql/: 001_schema.sql  002_seed.sql
