[project]
name = "oxplow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Miguel Elizalde", email = "miguel.elizalde.19.98@live.com" }
]
requires-python = ">=3.14"
dependencies = [
    "oxpg>=0.1.0",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
