[project]
name = "oxplow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Miguel Elizalde", email = "miguel.elizalde.19.98@live.com" },
]
requires-python = ">=3.14"
dependencies = ["oxpg>=0.1.0"]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pyright>=1.1.408", "pytest>=9.0.2", "ruff>=0.15.1"]


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
